# camera_model

./: CMakeLists.txt  README.md
data/fisheye/: fisheye_kannala-brandt_camera_calib.yaml  fisheye_mei_camera_calib.yaml  fisheye_pinhole_camera_calib.yaml
data/osmo/: osmo_kannala-brandt_camera_calib.yaml  osmo_pinhole_camera_calib.yaml
data/pattern/: ChArUco-A4_5-7.launch.txt  README.md  charuco.yaml
include/camera_model/calib/: CameraCalibration.h  StereoCameraCalibration.h
include/camera_model/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
include/camera_model/chessboard/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h
include/camera_model/gpl/: EigenUtils.h
include/camodocal/calib/: CameraCalibration.h  StereoCameraCalibration.h
src/: intrinsic_calib.cc  stereo_calib.cc
src/calib/: CameraCalibration.cc  StereoCameraCalibration.cc
src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
src/chessboard/: Chessboard.cc
src/gpl/: EigenQuaternionParameterization.cc  gpl.cc
src/sparse_graph/: Transform.cc
